[package]
name = "transpose"
version = "0.1.0"
authors = ["Elliott Mahler <join.together@gmail.com>"]

description = "Utility for transposing multi-dimensional data"

license = "MIT OR Apache-2.0"

repository = "http://github.com/ejmahler/transpose"
documentation = "http://docs.rs/transpose"
keywords = ["array", "transpose", "2d"]
categories = ["algorithms", "data structures"]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "transpose_benchmarks"
harness = false
